--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   },
   "dependencies": {
     "adal-node": "^0.1.28",
+    "apollo-boost": "^0.1.28",
+    "apollo-link-context": "^1.0.14",
     "apollo-server": "^2.2.5",
     "azure-keyvault": "^3.0.4",
     "bcrypt": "^3.0.2",
@@ -56,10 +58,13 @@
     "dotenv": "^6.2.0",
     "graphql": "^14.0.2",
     "graphql-import": "^0.7.1",
+    "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.3",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.14",
+    "prisma": "^1.26.6",
     "react": "^16.8.2",
+    "react-apollo": "^2.4.1",
     "react-dom": "^16.8.2",
     "validator": "^10.11.0"
   },
