--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "apollo-server": "^2.2.5",
     "azure-keyvault": "^3.0.4",
     "bcrypt": "^3.0.2",
+    "cors": "^2.8.5",
     "cuid": "^2.1.4",
     "dotenv": "^6.2.0",
     "formik": "^1.5.1",
