Added protected route with production build.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "run-p watch:server start:client",
     "start:client": "react-scripts start",
     "start:server": "node dist/server.js",
+    "start:server-prod": "NODE_ENV=production node dist/server.js",
     "watch:server": "nodemon --exec npm run restart",
     "build": "react-scripts build",
     "build:babel": "babel server --out-dir dist",
@@ -53,8 +54,10 @@
     "apollo-boost": "^0.1.28",
     "apollo-link-context": "^1.0.14",
     "apollo-server": "^2.2.5",
+    "apollo-server-express": "^2.4.8",
+    "auth0-js": "^9.10.0",
     "azure-keyvault": "^3.0.4",
-    "bcrypt": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cuid": "^2.1.4",
     "dotenv": "^6.2.0",
