--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-    "appService.defaultWebAppToDeploy": "/subscriptions/f9344551-eed5-47b3-a8f4-46fa282af927/resourceGroups/node-cosmosdb-starter/providers/Microsoft.Web/sites/node-cosmosdb-starter",
-    "appService.deploySubpath": ""
+    "appService.deploySubpath": "",
+    "appService.defaultWebAppToDeploy": "/subscriptions/f9344551-eed5-47b3-a8f4-46fa282af927/resourceGroups/react-graphql-starter/providers/Microsoft.Web/sites/react-graphql-starter",
+    "appService.zipIgnorePattern": [
+        ".vscode{,/**}"
+    ]
 }
