Added auth token for api key.

--- a/package.json
+++ b/package.json
@@ -56,16 +56,19 @@
     "apollo-server": "^2.2.5",
     "apollo-server-express": "^2.4.8",
     "auth0-js": "^9.10.0",
+    "axios": "^0.18.0",
     "azure-keyvault": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cuid": "^2.1.4",
     "dotenv": "^6.2.0",
+    "express-jwt": "^5.3.1",
     "formik": "^1.5.1",
     "graphql": "^14.0.2",
     "graphql-import": "^0.7.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.3",
+    "jwks-rsa": "^1.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.14",
     "prisma": "^1.26.6",
