--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "axios": "^0.18.0",
     "azure-keyvault": "^3.0.4",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "cuid": "^2.1.4",
     "dotenv": "^6.2.0",
@@ -68,10 +69,12 @@
     "graphql-import": "^0.7.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.3",
+    "jquery": "^3.4.1",
     "jwks-rsa": "^1.4.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "^5.3.14",
+    "popper.js": "^1.15.0",
     "prisma": "^1.26.6",
     "react": "^16.8.2",
     "react-apollo": "^2.4.1",
