--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.1",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.3",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.0",
@@ -63,17 +63,19 @@
     "cors": "^2.8.5",
     "cuid": "^2.1.4",
     "dotenv": "^6.2.0",
-    "express-jwt": "^5.3.1",
     "formik": "^1.5.1",
     "graphql": "^14.0.2",
     "graphql-import": "^0.7.1",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.3",
     "jquery": "^3.4.1",
-    "jwks-rsa": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "^5.3.14",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.15.0",
     "prisma": "^1.26.6",
     "react": "^16.8.2",
