--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "^5.3.14",
+    "node-sass": "^4.12.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -84,6 +85,7 @@
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "save-dev": "^2.0.0",
     "validator": "^10.11.0"
   },
   "eslintConfig": {
