--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "restoreMocks": true
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "adal-node": "^0.1.28",
     "apollo-boost": "^0.1.28",
     "apollo-link-context": "^1.0.14",
